--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ concurrency:
 jobs:
   publish-moja-canada:
     name: Publish Moja Canada
+    if: github.repository == 'moja-global/moja.canada'
     runs-on: ubuntu-latest
     permissions:
       contents: read
