add cbmaggregatorlibpqxxwriter to index.rst, add runs-on to build-docs.yml

--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -5,6 +5,7 @@ on:
     branches: [ source-docs ]
 
 jobs:
+  runs-on: ubuntu-latest  
   build-source-docs:
     name: Build Source Documentation
     steps:
