--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -15,6 +15,7 @@ jobs:
       - name: Build Sphinx docs
         run: |
           sudo apt-get install python3-sphinx
+          pip install sphinx-sitemap
           cd Source/docs_sphinx
           make html
      
