--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -27,6 +27,7 @@ jobs:
         with:
           publish-dir: 'Source/docs_sphinx/_build'
           production-branch: master
+          production-deploy: true
           github-token: ${{ secrets.GITHUB_TOKEN }}
           deploy-message: "Deploy from GitHub Actions"
           enable-pull-request-comment: false
