# This is a combination of 32 commits. # This is the 1st commit message:
In CBMSpinupSequencer, updated to read peatlandId from peatland map, and set variable peatland_class with the peatlandId. Enable peatland_class is writabler to prepare the transition from original peatland to different type peatland after certain disturbance.

# This is the commit message #2:

Update build-docs.yml
# This is the commit message #3:

Create requirements.txt
# This is the commit message #4:

modified source sample doc

# This is the commit message #5:

source docs format updated

# This is the commit message #6:

update ageclasshelper

# This is the commit message #7:

Update build-docs.yml
# This is the commit message #8:

Update build-docs.yml
# This is the commit message #9:

Update build-docs.yml
# This is the commit message #10:

update ageClassHelper

# This is the commit message #11:

chore: change documentation theme to doxygen

# This is the commit message #12:

updated cbmbuildlandunitmodule

# This is the commit message #13:

updated cbmdisturbanceeventmodule

# This is the commit message #14:

updated cbmdecaymodule

# This is the commit message #15:

updated cbmbuildlandunitmodule

# This is the commit message #16:

updated cbmdecaymodule

# This is the commit message #17:

Update build-docs.yml
# This is the commit message #18:

Update build-docs.yml
# This is the commit message #19:

update: docs for ageclasshelper

# This is the commit message #20:

update: docs for ageclasshelper

# This is the commit message #21:

update ageClassHelper

# This is the commit message #22:

update docs for cbmageindicators

# This is the commit message #23:

update docs

# This is the commit message #24:

update docs

# This is the commit message #25:

add: source docs for peatlandparameters

# This is the commit message #26:

verify AgeClassHelper

# This is the commit message #27:

verify cbmageindicators

# This is the commit message #28:

add: docs for TreeSpecies

# This is the

--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -2,6 +2,8 @@ name: Build Source Docs
 
 on:
   push:
+   branches: [ source-docs ]
+  pull_request:
     branches: [ source-docs ]
 
 jobs:
@@ -12,16 +14,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Build Sphinx docs
+      - name: Build Doxygen docs
         run: |
-          sudo apt-get install python3-sphinx
           sudo apt-get install doxygen
-          pip install sphinx-sitemap
-          pip install breathe
-          pip install sphinx-rtd-theme
+          sudo apt-get install graphviz
           cd Source/docs_sphinx
-          make html
-     
+          doxygen Doxyfile.in
+    
       - name: Deploy to Netlify
         uses: nwtgck/actions-netlify@v1.2
         with:
