--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -21,6 +21,7 @@ jobs:
           pip install sphinx-sitemap
           pip install breathe
           pip install sphinx-rtd-theme
+          pip install furo
           cd Source/docs_sphinx
           make html
       
