--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -30,7 +30,7 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4.3.3
         with:
           branch: gh-pages # The branch the action should deploy to.
-          folder: Source/docs/_build # The folder the action should deploy.
+          folder: Source/docs/_build/html # The folder the action should deploy.
     
     
 #       - name: Deploy to Netlify
